@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.sqlg</groupId>
     <artifactId>sqlgfx</artifactId>
@@ -10,6 +10,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <sqlg.version>3.1.0-SNAPSHOT</sqlg.version>
         <jfx.version>22-ea+16</jfx.version>
+        <controlsfx.version>11.2.1</controlsfx.version>
         <antlr4.version>4.9.1</antlr4.version>
         <log4j.version>2.19.0</log4j.version>
     </properties>
@@ -20,25 +21,20 @@
             <version>${jfx.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>${jfx.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.2.0</version>
+            <version>${controlsfx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
             <version>0.11.2</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>io.github.mkpaz</groupId>-->
-<!--            <artifactId>atlantafx-base</artifactId>-->
-<!--            <version>2.0.1</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.github.mkpaz</groupId>-->
+        <!--            <artifactId>atlantafx-base</artifactId>-->
+        <!--            <version>2.0.1</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>net.synedra</groupId>
             <artifactId>validatorfx</artifactId>
@@ -105,6 +101,19 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>org.sqlg.ui.App</mainClass>
+                            <options>
+                                <option>--enable-preview</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+                                <option>--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
